cmake_minimum_required(VERSION 3.16)
set (CMAKE_CXX_STANDARD 20)

set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "Prefix prepended to install directories.")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

project(SqlTest)

include(ExternalProject)

include(cmake/BuildMariaDBConnector.cmake)
include_directories(BEFORE ${MARIADB_CONNECTOR_INCLUDE_DIR})

function(add_program name source)
  add_executable(${name} ${source})
  target_link_libraries(${name} ${MARIADB_CONNECTOR_LIBRARIES} crypto crypt ssl)
endfunction()

set(CMAKE_CXX_FLAGS "-fsanitize=address -fsanitize=undefined")

add_program(binary_ps binary_ps.cc)
add_program(create_connections create_connections.cc)
add_program(send_query send_query.cc)
add_program(send_query_from_file send_query_from_file.cc)
add_program(slow_read slow_read.cc)
add_program(simple simple.cc)
add_program(change_user change_user.cc)
add_program(change_user_grants change_user_grants.cc)
add_program(kill_own_connection kill_own_connection.cc)
add_program(kill_query kill_query.cc)
add_program(long_ps long_ps.cc)
add_program(many_ps many_ps.cc)
add_program(ps ps.cc)
add_program(ps_loop ps_loop.cc)
add_program(ps_cursor ps_cursor.cc)
add_program(ps_open_and_close ps_open_and_close.cc)
add_program(session_track session_track.cc)
add_program(replication replication.cc)
add_program(lots_of_sescmd lots_of_sescmd.cc)
add_program(read_from_stdin read_from_stdin.cc)
add_program(trx trx.cc)
add_program(ps_read_from_stdin ps_read_from_stdin.cc)
add_program(ps_datetime ps_datetime.cc)
add_program(lag_between_cmds lag_between_cmds.cc)
add_program(send_double_commit send_double_commit.cc)
add_program(parallel_query_loop parallel_query_loop.cc)
add_program(connection_attributes connection_attributes.cc)
add_program(big_packet big_packet.cc)
add_program(small_then_big small_then_big.cc)
add_program(execute_direct execute_direct.cc)
add_program(state_tracker state_tracker.cc)
add_program(bulk_execute bulk_execute.cc)

add_program(odbc_query odbc_query.cc)
target_link_libraries(odbc_query odbc)

add_subdirectory(odbc)
